samples/_failures_safe/1761640062_314970_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a45d3c05.c: In function ‘main’:
./samples/SAFE/__tmp_a45d3c05.c:147:9: error: expected declaration or statement at end of input
  147 |         destroy_matrix(&a);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_a45d3c05.c:147:9: error: expected declaration or statement at end of input
